fix: layout breaks when text size is bigger than div size

--- a/src/components/Form/styles.css
+++ b/src/components/Form/styles.css
@@ -54,8 +54,10 @@ input {
     display: flex;
     align-items: center;
     justify-content: center;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+    overflow: auto;
 
-    width: 100%;
     min-height: 3.6rem;
 
     font-weight: 500;
